# mybooks

./: .env.sample  .gitignore  .prettierrc.json  AGENTS.md  DRF_QUALITY_ALIGNMENT.md  IMPLEMENTATION_COMPLETE.md  api-spec.yaml  docs.md  justfile  manage.py  openapi.yaml  petstore.yaml  pyproject.toml
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
agent/: .app_data.json  .env.sample  agent.py  app.py  app_data_store.py  oauth.py  oauth_flow.py  utils.py
books/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py
client/: .env.sample  app_data_store.py  client.py  oauth.py  oauth_flow.py  utils.py
components/: components.py  link.html
components/alert/: components.py  error.html  info.html  success.html  warning.html
mybooks/: admin.py  api.py  api_urls.py  api_views.py  app_template_loader.py  apps.py  asgi.py  core_views.py  debug_middleware.py  gunicorn.py  models.py  oauth_dcr_view.py  oauth_validators.py  oauth_views.py  settings.py  urls.py  utils.py  views.py  wsgi.py
mybooks/fixtures/: admin_interface.yaml  auth_user.yaml  books.yaml  oauth2_provider.yaml  user.yaml
mybooks/static/mybooks/css/: admin.css
openapi/: mybooks.yaml
specs/001-extend-the-application/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-extend-the-application/contracts/: api-spec.yaml
specs/001-extend-the-application/testing/: README.md  scenario-1-add-book.http  scenario-2-update-status.http  scenario-3-same-author.http  scenario-4-review.http  scenario-5-filtering.http  scenario-6-edge-cases.http  scenario-comprehensive-oauth.http  setup.http
templates/: app_base.html  base.html  estimate.html  oauth_apps.html  oauth_flow_test.html  signin.html  signup.html
templates/admin/: base_site.html
templates/includes/: messages.html
templates/oauth2_provider/: authorize.html
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: source.css
